Added simple form and contact page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,18 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div class='container'>
+    <div class='row'>
+      <ul class="nav nav-pills nav-stacked navbar-fixed-left col-md-2">
+        <li><%= link_to "Home", static_index_path %></li>
+        <li><%= link_to "Blog", blog_index_path %></li>
+        <li><%= link_to "Case Studies", case_studies_index_path %></li>
+        <li><%= link_to "Contact", static_contact_path %></li>  
+      </ul>
+      <div class='col-md-10'>
+        <%= yield %>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
