--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,27 @@
         <li><%= link_to "Case Studies", case_studies_index_path %></li>
         <li><%= link_to "Contact", static_contact_path %></li>  
       </ul>
-      <div class='col-md-10'>
-        <%= yield %>
+    </div>
+    <div class='flash-container'>
+      <% if flash[:notice] %>
+      <div class='alert alert-success'>
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <%= flash[:notice] %>
       </div>
+    <% elsif flash[:error] %>
+      <div class='alert alert-danger'>
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <%= flash[:error] %>
+      </div>
+    <% elsif flash[:alert] %>
+      <div class='alert alert-warning'>
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <%= flash[:alert] %>
+      </div>
+    <% end %>
+    </div>
+    <div class='row'>
+      <%= yield %>
     </div>
   </div>
 </body>
