finished making topics model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,7 @@
     <div class='row'>
       <ul class="nav nav-pills">
         <li><%= link_to "Home", static_index_path %></li>
-        <li><%= link_to "Blog", blog_index_path %></li>
-        <li><%= link_to "Case Studies", case_studies_index_path %></li>
+        <li><%= link_to "Topic", topics_path %></li>
         <li><%= link_to "Contact", static_contact_path %></li>  
       </ul>
     </div>
