--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,14 @@
 </head>
 <body>
   <div class='container'>
+    <div class='row user-info'>
+      <% if current_user %>
+        <div class='pull-right'>
+          Hello <%= current_user.username %>! <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+          <%= link_to "Edit Account", edit_user_registration_path(current_user) %>
+        </div>
+      <% end %>
+    </div>
     <div class='row'>
       <ul class="nav nav-pills">
         <li><%= link_to "Home", static_index_path %></li>
