--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,4 +1,29 @@
-<p id="notice"><%= notice %></p>
+<%= @topic.name %><br />
+Public: <%= @topic.public %>
 
-<%= link_to 'Edit', edit_topic_path(@topic) %> |
+<h1>Listing Posts</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @topic.posts.each do |post| %>
+      <tr>
+        <td><%= post.title %></td>
+        <td><%= link_to 'Show', topic_post_path(@topic, post) %></td>
+        <td><%= link_to 'Edit', edit_topic_post_path(@topic, post) %></td>
+        <td><%= link_to 'Destroy', topic_post_path(@topic, post), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to "New Post", new_topic_post_path(@topic) %>
+<%= link_to 'Edit', edit_topic_path(@topic) %>
 <%= link_to 'Back', topics_path %>
