--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -3,24 +3,11 @@ Public: <%= @topic.public %>
 
 <h1>Listing Posts</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @topic.posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= link_to 'Show', topic_post_path(@topic, post) %></td>
-        <td><%= link_to 'Edit', edit_topic_post_path(@topic, post) %></td>
-        <td><%= link_to 'Destroy', topic_post_path(@topic, post), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<ul class="nav nav-tabs">
+  <% @topics.each do |topic| %>
+    <li role="presentation"><a href="topics/#{topic.id}"><%= topic.name %></a></li>
+  <% end %>
+</ul><br />
 
 <br>
 
