--- a/app/views/static/contact.html.erb
+++ b/app/views/static/contact.html.erb
@@ -1,5 +1,5 @@
 <h1>Contact Me</h1>
-
+<p>Please report any bugs and leave comments here</p>
 <form action="https://getsimpleform.com/messages?form_api_token=f981ab3a3278b962c765e01d64816070" method="post">
   <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
   <!--input type='hidden' name='redirect_to' value='http://www.facebook.com' /-->
