--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,7 @@
     <div class='row user-info'>
       <% if current_user %>
         <div class='pull-right'>
-          Hello <%= current_user.username %>! <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-          <%= link_to "Edit Account", edit_user_registration_path(current_user) %>
+          Hello <%= link_to current_user.username, edit_user_registration_path(current_user) %>! <%= link_to " ", destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out' %>
         </div>
       <% end %>
     </div>
