--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,17 +1,20 @@
 <h1>Listing Topics</h1>
 
-<table>
+<table width='700' class='table'>
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th>Table Name</th>
+      <th>Posts</th>
+      <th>Edit Name</th>
+      <th>Delete</th>
     </tr>
   </thead>
 
   <tbody>
     <% @topics.each do |topic| %>
       <tr>
-        <td><%= topic.name %></td>
-        <td><%= link_to 'Show', topic %></td>
+        <td><h4><%= topic.name %></h4></td>
+        <td><%= topic.posts.count %></td>
         <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
         <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -22,3 +25,4 @@
 <br>
 
 <%= link_to 'New Topic', new_topic_path %>
+<%= link_to 'Back', topic_path(@topics.first) %>
