--- a/app/views/posts/_post_list.html.erb
+++ b/app/views/posts/_post_list.html.erb
@@ -2,6 +2,9 @@
   <%= render partial: 'votes/voter', locals: {post: post} %>
   <div>
     <h4><%= link_to post.title, topic_post_path(post.topic, post) %></h4>
-    <small><%= post.created_at.in_time_zone("Central Time (US & Canada)").strftime("%B %e, %Y %l:%M %P") %></small>
+    <small>
+      by <%= link_to post.user.username, topic_path(post.topic) %>
+      on <%= post.created_at.in_time_zone("Central Time (US & Canada)").strftime("%B %e, %Y %l:%M %P") %>
+    </small>
   </div><br />
 <% end %>
