--- a/app/views/static/_footer.html.erb
+++ b/app/views/static/_footer.html.erb
@@ -1,3 +1,8 @@
+<br/><br/>
 <div id='footer' style='text-align: center'>
-  <p>Made by Michael Do</p>
+  <p>
+    Made by Michael Do<br/>
+    <%= link_to "Contact Me", static_contact_path %>
+  </p>
+
 </div>
