--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,9 +22,9 @@
 }
 
 .top-bar {
-  display: inline-block;
+  height: 50px;
   width: 100%;
-  background-color: grey;
+  background-color: #c0c0c0;
 }
 
 #avatar {
@@ -37,4 +37,12 @@
   background-color: grey;
   margin-top: 30px;
   border-radius: 5px;
+}
+
+.top-bar-info {
+  margin-top: 5px;
+}
+
+.user-info {
+  margin-top: 20px;
 }
