--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,44 +7,49 @@
   <%= csrf_meta_tags %>
   <script></script>
 </head>
-<body>
-  <div class='container'>    
-    <div class='row top-bar'>
-      <ul class="nav nav-pills">
-        <li><%= link_to "Home", static_index_path %></li>
-        <li><%= link_to "Top Posts", topic_posts_path(Topic.first) %></li>
-        <li><%= link_to "Users", users_path %></li>
-      </ul>
-      <div class='row user-info'>
-      <% if current_user %>
-        <div class='pull-right'>
-          Hello <%= link_to current_user.username, edit_user_registration_path(current_user) %>! <%= link_to " ", destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out' %>
+<body> 
+  <div class='top-bar'>
+    <div class='container'>
+      <div class='row top-bar-info'>
+        <div class='col-md-8 col-xs-8'>
+          <ul class="nav nav-pills navbar-static-top">
+            <li><%= link_to "Home", static_index_path %></li>
+            <li><%= link_to "Top Posts", topic_posts_path(Topic.first) %></li>
+            <li><%= link_to "Users", users_path %></li>
+          </ul>
         </div>
-      <% end %>
+        <div class='col-md-4 col-xs-4'>
+          <% if current_user %>
+            <div class='pull-right user-info'>
+              Hello <%= link_to current_user.username, edit_user_registration_path(current_user) %>! <%= link_to " ", destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out' %>
+            </div>
+          <% end %>
+        </div>
+      </div>
     </div>
-    </div>
+  </div>
+
+  <div class='container'>
     <div class='flash-container'>
       <% if flash[:notice] %>
       <div class='alert alert-success'>
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <%= flash[:notice] %>
       </div>
-    <% elsif flash[:error] %>
-      <div class='alert alert-danger'>
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <%= flash[:error] %>
-      </div>
-    <% elsif flash[:alert] %>
-      <div class='alert alert-warning'>
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <%= flash[:alert] %>
-      </div>
-    <% end %>
+      <% elsif flash[:error] %>
+        <div class='alert alert-danger'>
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <%= flash[:error] %>
+        </div>
+      <% elsif flash[:alert] %>
+        <div class='alert alert-warning'>
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <%= flash[:alert] %>
+        </div>
+      <% end %>
     </div>
-    <div class='row'>
-      <%= yield %>
-    </div>
-    <%= render partial: 'static/footer' %>
+    <%= yield %>
   </div>
+  <%= render partial: 'static/footer' %>
 </body>
 </html>
