--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Welcome!</h1>
-<%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %>
-<%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %><br/>
+<%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-default' %>
+<%= link_to "Sign In", new_user_session_path, class: 'btn btn-default' %><br/>
 Just a simple journaling app where you can easily organize your thoughts and share them with others.
