--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -18,18 +18,25 @@
     Quick Links
   </div>
   <div class='col-md-8'>
-    <ul class="nav nav-tabs">
-      <% @topics.each do |item| %>
-        <li role="presentation"><%= link_to item.name, topic_path(item) %></li>
+    <ul class="nav nav-tabs" role="tablist">
+   
+      <% @topics.each do |topic| %> 
+        <li role="presentation"  class="<%= 'active' if @topic.name == topic.name %> ">
+          <%= link_to topic.name, topic_path(topic) %>
+        </li>
       <% end %> 
+
 
       <% if policy(@topic).update? %> 
         <div class='pull-right'><%= link_to " ", topics_path, class: 'glyphicon glyphicon-pencil' %></div>
       <% end %>
-    </ul><br />
+    </ul>
     <% if policy(@topic).update? %>
       <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %><br/>
     <% end %>
+
+
+
     <%= render partial: 'posts/post_list', locals: {posts: @posts} %>
     <%= will_paginate @posts %>
   </div>
