--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
         <div class='col-md-8 col-xs-8'>
           <ul class="nav nav-pills navbar-static-top">
             <li><%= link_to "Home", static_index_path %></li>
-            <li><%= link_to "Top Posts", topic_posts_path(Topic.first) %></li>
+            <!--<li><%= link_to "Top Posts", topic_posts_path(Topic.first) %></li-->
             <li><%= link_to "Users", users_path %></li>
           </ul>
         </div>
