--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -25,4 +25,4 @@
 <br>
 
 <%= link_to 'New Topic', new_topic_path %>
-<%= link_to 'Back', topic_path(@topics.first) %>
+<%= link_to 'Back', user_path(@user) %>
