--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,14 +14,14 @@
         <div class='col-md-8 col-xs-8'>
           <ul class="nav nav-pills navbar-static-top">
             <li><%= link_to "Home", static_index_path %></li>
-            
+            <li><%= link_to "Top Posts", posts_path %></li>
             <li><%= link_to "Users", users_path %></li>
           </ul>
         </div>
         <div class='col-md-4 col-xs-4'>
           <% if current_user %>
             <div class='pull-right user-info'>
-              Hello <%= link_to current_user.username, edit_user_registration_path(current_user) %>! <%= link_to " ", destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out' %>
+              Hello <%= link_to current_user.username, user_path(current_user) %>! <%= link_to " ", destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out' %>
             </div>
           <% end %>
         </div>
