--- a/app/views/posts/_post_list.html.erb
+++ b/app/views/posts/_post_list.html.erb
@@ -3,7 +3,7 @@
   <div>
     <h4><%= link_to post.title, topic_post_path(post.topic, post) %></h4>
     <small>
-      by <%= link_to post.user.username, topic_path(post.topic) %>
+      by <%= link_to post.user.username, user_path(post.user) %>
       on <%= post.created_at.in_time_zone("Central Time (US & Canada)").strftime("%B %e, %Y %l:%M %P") %>
     </small>
   </div><br />
