--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,8 +17,8 @@
   <div class='col-md-8'>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
-      <% @topics.each do |topic| %>
-        <li role="presentation" class="">
+      <% @topics.each_with_index do |topic, index| %>
+        <li role="presentation" class="<%= 'active' if index == 0 %>">
           <a href="#<%= topic.name %>" aria-controls="<%= topic.name %>" role="tab" data-toggle="tab">
             <%= topic.name %>
           </a>
@@ -29,13 +29,42 @@
     <!-- Tab panes -->
     <div class="tab-content">
       <br/>
-      <% @topics.each do |topic| %>
-        <div role="tabpanel" class="tab-pane" id="<%= topic.name %>">
+      <% @topics.each_with_index do |topic, index| %>
+        <div role="tabpanel" class="tab-pane <%= 'active' if index == 0 %>" id="<%= topic.name %>">
           <% if (@user == current_user) %>
             <%= link_to "New Post", new_topic_post_path(topic), class: 'btn btn-success' %><br/>
           <% end %>
 
-          <%= render partial: 'posts/post_list', locals: {posts: topic.posts} %>
+          <div class="dropdown">
+            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              Order By
+              <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+              <li><%= link_to "Newest First", topic_reorder_posts_path(topic), method: :post %></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li><a href="#">Separated link</a></li>
+            </ul>
+          </div>
+
+          <!-- NEEDS TO BE REFACTORED -->
+          <% case topic.posts_order %>
+          <% when "newest first" %>
+            <% @posts = topic.posts.sort_by(&:created_at).reverse %>
+          <% when "oldest first" %>
+            <% @posts = topic.posts.sort_by(&:created_at) %>
+          <% when "A-Z" %>
+            <% @posts = topic.posts.sort_by(&:title) %>
+          <% when "Z-A" %>
+            <% @posts = topic.posts.sort_by(&:title).reverse %>
+          <% when "highest rank" %>
+            <% @posts = topic.posts.ranked %>
+          <% when "lowest rank" %>
+            <% @posts = topic.posts.ranked.reverse %>
+          <% end %>
+
+          <%= render partial: 'posts/post_list', locals: {posts: @posts} %>
         </div>
       <% end %>
     </div>
