added a bit of styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,7 @@
 .top-bar {
   height: 50px;
   width: 100%;
-  background-color: #c0c0c0;
+  background-color: #000000;
 }
 
 #avatar {
@@ -45,4 +45,8 @@
 
 .user-info {
   margin-top: 20px;
+}
+
+.nav-links {
+  text-color: #FFFFFF;
 }
