--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -5,6 +5,9 @@
 <table>
   <thead>
     <tr>
+      <th>User</th>
+      <th>User</th>
+      <th>Body</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +15,9 @@
   <tbody>
     <% @friends.each do |friend| %>
       <tr>
+        <td><%= friend.user %></td>
+        <td><%= friend.user %></td>
+        <td><%= friend.body %></td>
         <td><%= link_to 'Show', friend %></td>
         <td><%= link_to 'Edit', edit_friend_path(friend) %></td>
         <td><%= link_to 'Destroy', friend, method: :delete, data: { confirm: 'Are you sure?' } %></td>
