--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -1,4 +1,19 @@
 <p id="notice"><%= notice %></p>
 
+<p>
+  <strong>User:</strong>
+  <%= @friend.user %>
+</p>
+
+<p>
+  <strong>User:</strong>
+  <%= @friend.user %>
+</p>
+
+<p>
+  <strong>Body:</strong>
+  <%= @friend.body %>
+</p>
+
 <%= link_to 'Edit', edit_friend_path(@friend) %> |
 <%= link_to 'Back', friends_path %>
