--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,11 +27,6 @@
   background-color: #000000;
 }
 
-#avatar {
-  background-color: blue;
-  height: 150px;
-}
-
 #quick-links {
   height: 500px;
   background-color: grey;
@@ -49,4 +44,12 @@
 
 .nav-links {
   text-color: #FFFFFF;
+}
+
+body {
+  background-color: #C0C0C0;
+}
+
+.search-bar {
+  margin-top: 3em;
 }
